--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
     },
     "autoload": {
         "classmap": [
-            "classes/"
+            "classes/",
+            "exception/",
+            "interface/"
         ]
     }
 
